--- a/ServiceExercise/app/src/main/AndroidManifest.xml
+++ b/ServiceExercise/app/src/main/AndroidManifest.xml
@@ -19,6 +19,13 @@
         <activity android:name=".SecondActivity" />
 
         <service android:name=".service.JokeDownloadService" />
+
+        <receiver android:name=".ChargingBroadcastReceiver" android:exported="false">
+            <intent-filter>
+                <action android:name="android.intent.action.ACTION_POWER_CONNECTED" />
+                <action android:name="android.intent.action.ACTION_POWER_DISCONNECTED" />
+            </intent-filter>
+        </receiver>
     </application>
 
     <uses-permission android:name="android.permission.INTERNET" />
